force-app/main/default/objects/Account/fields/DevOps_Center__c.field-meta.xml
<CustomField>
    <fullName>DevOps_Center__c</fullName>
    <label>DevOps Center</label>
    <length>249</length>
    <type>Text</type>
</CustomField>