force-app/main/default/objects/Account/fields/DevOps_Center_Country__c.field-meta.xml
<CustomField>
    <fullName>DevOps_Center_Country__c</fullName>
    <label>DevOps Center Country</label>
    <length>239</length>
    <type>Text</type>
</CustomField>