force-app/main/default/objects/Account/fields/DevOps_Center_Dis__c.field-meta.xml
<CustomField>
    <fullName>DevOps_Center_Dis__c</fullName>
    <label>DevOps Center Dis</label>
    <length>250</length>
    <type>Text</type>
</CustomField>