force-app/main/default/objects/Account/fields/DevOps_Center_Dummy01__c.field-meta.xml
<CustomField>
    <fullName>DevOps_Center_Dummy01__c</fullName>
    <label>DevOps Center Dummy01</label>
    <length>252</length>
    <type>Text</type>
</CustomField>