force-app/main/default/objects/Account/fields/DevOps_Center_Dummy__c.field-meta.xml
<CustomField>
    <fullName>DevOps_Center_Dummy__c</fullName>
    <label>DevOps Center Dummy</label>
    <length>251</length>
    <type>Text</type>
</CustomField>