force-app/main/default/objects/Account/fields/DevOps_Center_Phone__c.field-meta.xml
<CustomField>
    <fullName>DevOps_Center_Phone__c</fullName>
    <label>DevOps Center Phone</label>
    <length>250</length>
    <type>Text</type>
</CustomField>