force-app/main/default/objects/Account/fields/DevOps_Center_Promote__c.field-meta.xml
<CustomField>
    <fullName>DevOps_Center_Promote__c</fullName>
    <defaultValue>0</defaultValue>
    <label>DevOps Center Promote</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>