force-app/main/default/objects/Account/fields/DevOps_Center_Test02__c.field-meta.xml
<CustomField>
    <fullName>DevOps_Center_Test02__c</fullName>
    <label>DevOps Center Test02</label>
    <length>255</length>
    <type>Text</type>
</CustomField>