force-app/main/default/objects/Account/fields/DevOps_Center_Test__c.field-meta.xml
<CustomField>
    <fullName>DevOps_Center_Test__c</fullName>
    <label>DevOps Center Test</label>
    <length>200</length>
    <type>Text</type>
</CustomField>